DEVELOPMENT VERSION

 Global:
 - Use a more condenced for loop, using `in`, when going over arrays.
 - Added a current branch to the GitHub repo for tracking the latest
   release from a single ref.

 Traits:
 - Add a declarative interface for defining new traits and classes.

0.0.11 : 2015-01-16

 Global:
 - Added a .lvimrc file to enforce indentation style (requires the
   vim-localvimrc plugin).
 - Default o.Class, o.Trait, and o.Attribute constructor arguments to
   an empty object (o.Type was already doing this).
 - Moved wiki documentation into the main repo so that it is versioned
   along with the code.

 Traits:
 - Recursively set child trait attribute arguments when calling setFromArgs.
   This means that when making a class instance that arguments for child
   trait attributes will now be applied as they should have been.

 Attributes:
 - Use the new identifier type instead of the nonEmptyString type for various
   arguments such as key, predicate, etc.

 Types:
 - Added an identifier type to match against valid JavaScript idenitfiers
   rules (does not currently support unicode characters), per:
   https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Values,_variables,_and_literals#Variables

0.0.10 : 2014-03-09

 Global:
 - Use Grunt for build tools.
 - Lots of reworking of the build tools - much less room for human error.
 - Created an Object.getPrototypeOf() shim which calls __proto__ if not
   available in order to support older browsers.  This is available as the
   plumbing function o.getPrototypeOf().

0.0.9 : 2014-02-04

 Global:
 - Migrated everything to CommonJS format modules (no more hacks for the
   web, those will be handled independently).
 - Better error messaging across the board (no more "..." errors).
 - Lots of adjustments to reduce the minified size by several kilobytes.
 - Created several utilities in the bin directory for creating combined
   and minified versions of o.js.