@@ -2,6 +2,7 @@ var o_construct = require('./o-construct.js');
 var o_merge = require('./o-merge.js');
 
 var o_Type;
+
 o_Type = o_construct(
     function (args) {
         args = args || {};
@@ -12,6 +13,7 @@ o_Type = o_construct(
     },
     {
         check: function (val) {
+            if (o_Type.validationDisabled) return true;
             if (this._parent) { if (!this._parent.check(val)) return false; }
             if (!this._validateMethod) return true;
             if (!this._validateMethod( val )) return false;
@@ -38,4 +40,7 @@ o_Type = o_construct(
         }
     }
 );
+
+o_Type.validationDisabled = false;
+
 module.exports = o_Type;
