@@ -59,5 +59,7 @@ module.exports = {
     has:       require('./o-has.js'),
     local:     require('./o-local.js'),
     merge:     require('./o-merge.js'),
-    ucFirst:   require('./o-ucFirst.js')
+    ucFirst:   require('./o-ucFirst.js'),
+
+    disableTypeValidation: require('./o-disableTypeValidation.js')
 };
